--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body text-align=center>
 
-<h1>ToDo</h1>
+<h1>ZSYL install</h1>
 <p>This is a very simple to-do list app. It's easy to create, complete and delete your to-dos. It makes your life more effective and efficient.</p>
-<p><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/gcmufps6y4evvlk/manifest.plist">Install ToDo v1.5.0</a></p>
+<p><a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/gcmufps6y4evvlk/manifest.plist">Install ZSYL app</a></p>
 </body>
 </html>
