--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <h1>ToDo</h1>
 <p>ZSYL IOS IPA 网页安装测试.</p>
+<p>兼容ios 14.2测试包,环境pre.</p>   
 <p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/master/manifest.plist">Install ZSYLpre v1.7.0</a></p>
 </a></p>
 ==</body>
