--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
     <title></title>
+     <script>
+			function hello(){
+				console.log("测试测试 你好")
+			}
+			hello();
+	</script>
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="Content-Language" content="zh-CN" />
     <style type="text/css">
