--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body text-align=center>
-
+<input type="button" onclick="hello()" value="say hello and Trigger Handler">
 <h1>ToDo</h1>
 <p>ZSYL IOS IPA 网页安装测试.</p>
 <p>兼容ios 14.2测试包,环境pre.日期2020.11.6</p>   
