--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <h1>ToDo</h1>
 <p>ZSYL IOS IPA 网页安装测试.</p>
 <p>兼容ios 14.2测试包,环境pre.日期2020.11.6</p>   
-<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install ZSYLpre v1.7.0</a></p>
+<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install ZSYL v1.7.0</a></p>
+</a></p>
+<p>zsyl安装包,环境ol.日期2020.12.4</p>   
+<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install ZSYL-OL v1.7.0</a></p>
+</a></p>
+<p>chanqp安装包,环境ol.日期2020.12.4</p>   
+<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install CHANQP-OL v1.7.0</a></p>
 </a></p>
 ==</body>
 </html>
