--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script>
 		function hello(){
 			console.log("测试测试 你好")
-			var str = 'back2game';
+			var str = 'js://webview?arg=back2game';
 			parent.postMessage(str,'*');
 		}
 	</script>
