--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			console.log("测试测试 你好")
 			var str = 'js://webview?arg=back2game';
 			parent.postMessage(str,'*');
-			document.location = str;
+			document.location = 'http://baidu.com';
 		}
 	</script>
 <body text-align=center>	
