--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			console.log("测试测试 你好")
 			var str = 'js://webview?arg=back2game';
 			//parent.postMessage(str,'*');
-			 var xhr2 = new XMLHttpRequest();
-        		 xhr2.open('GET', 'https://pv.sohu.com/cityjson?ie=utf-8', true);
-        		 xhr2.setRequestHeader("Content-Type", "application/x-www-form-urlencoded;charset=UTF-8");
-        		 xhr2.addEventListener("load", function () {
-            		 console.log('xhr2',xhr2.response)
-        		 })
-        		 xhr2.send();
+			 //var xhr2 = new XMLHttpRequest();
+        		 //xhr2.open('GET', 'https://pv.sohu.com/cityjson?ie=utf-8', true);
+        		 //xhr2.setRequestHeader("Content-Type", "application/x-www-form-urlencoded;charset=UTF-8");
+        		 //xhr2.addEventListener("load", function () {
+            		 //console.log('xhr2',xhr2.response)
+        		 //})
+        		 //xhr2.send();
 		}
 		
 	</script>
