--- a/index.html
+++ b/index.html
@@ -10,25 +10,16 @@
 </head>
 	<script>
 		function hello(){
-			console.log("测试测试 你好")
-			var str = 'js://webview?arg=back2game';
-			//parent.postMessage(str,'*');
-			 //var xhr2 = new XMLHttpRequest();
-        		 //xhr2.open('GET', 'https://pv.sohu.com/cityjson?ie=utf-8', true);
-        		 //xhr2.setRequestHeader("Content-Type", "application/x-www-form-urlencoded;charset=UTF-8");
-        		 //xhr2.addEventListener("load", function () {
-            		 //console.log('xhr2',xhr2.response)
-        		 //})
-        		 //xhr2.send();
+			console.log("测试测试 你好")		
 		}
 		
 	</script>
 <body text-align=center>	
 <input type="button" onclick="hello()" value="say hello and Trigger Handler">
-<h1>ToDo</h1>
+<h1> 多平台 ios ipa 网页安装测试 </h1>
 <p>ZSYL IOS IPA 网页安装测试.</p>
 <p>兼容ios 14.2测试包,环境pre.日期2020.11.6</p>   
-<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install ZSYL v1.7.0</a></p>
+<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install FXYL v1.7.0</a></p>
 </a></p>
 <p>zsyl安装包,环境ol.日期2020.12.4</p>   
 <p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/manifest.plist">Install ZSYL-OL v1.7.0</a></p>
