--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="Content-Language" content="zh-CN" />
     <style type="text/css">
-        body{text-align:center;padding-top:100}
+        body{text-align:center;padding-top:0}
         div{width:778px;margin:0 auto;background:#fff;text-align:left;}
     </style>
 </head>
@@ -16,18 +16,40 @@
 	</script>
 <body text-align=center>	
 <input type="button" onclick="hello()" value="say hello and Trigger Handler">
-<h1> 多平台 ios ipa 网页安装测试 </h1>
-<p style="
-    margin-top: 100px;
-">ZSYL IOS IPA 网页安装测试.</p>
-<p>兼容ios 14.2测试包,环境pre.日期2020.11.6</p>   
-<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/manifest.plist">Install FXYL v1.7.0</a></p>
-</a></p>
-<p>zsyl安装包,环境ol.日期2020.12.4</p>   
-<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/manifest.plist">Install ZSYL-OL v1.7.0</a></p>
-</a></p>
-<p>chanqp安装包,环境ol.日期2020.12.4</p>   
-<p><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/manifest.plist">Install CHANQP-OL v1.7.0</a></p>
-</a></p>
-==</body>
+<h1 style="
+    margin-top: 100px;"> 
+           多平台 ios ipa 网页安装测试 </h1>
+<h2>兼容ios 14.2测试包 egret原生库版本1.1.0 </h2>   
+	
+<div style="width:33%; height: 500px; float:left;">    
+<p>打包日期 20210318 </p>   
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/test/manifest.plist">Install ZSYL-TEST v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/pre/manifest.plist">Install ZSYL-PRE v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/online/manifest.plist">Install ZSYL-OL v1.10.0</a></p>
+<p></p>
+</div>
+	
+<div style="width:33%; height: 500px; float:left;">    
+<p>打包日期 20210318 </p>   
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/fxyl/test/manifest.plist">Install FXYL-TEST v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/fxyl/pre/manifest.plist">Install FXYL-PRE v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/fxyl/online/manifest.plist">Install FXYL-OL v1.10.0</a></p>
+<p></p>
+</div>
+	
+<div style="width:33%; height: 500px; float:left;">    
+<p>打包日期 20210318 </p>   
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/test/manifest.plist">Install CHANQP-TEST v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/pre/manifest.plist">Install CHANQP-PRE v1.10.0</a></p>
+<p></p>
+<p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/online/manifest.plist">Install CHANQP-OL v1.10.0</a></p>
+<p></p>
+</div>   
+
+</body>
 </html>
