--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
 <body text-align=center>	
 <input type="button" onclick="hello()" value="say hello and Trigger Handler">
 <h1 style="
-    margin-top: 100px;"> 
+    margin-top: 50px;"> 
            多平台 ios ipa 网页安装测试 </h1>
 <h2>兼容ios 14.2测试包 egret原生库版本1.1.0 </h2>   
 	
-<div style="width:33%; height: 500px; float:left;">    
+<div float:center;"="">
+                   
+<div style="width:33%; height: 400px; float:left;">    
 <p>打包日期 20210318 </p>   
+<p style="
+    margin-top: 50px;">内网环境 </p>                                                   
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/test/manifest.plist">Install ZSYL-TEST v1.10.0</a></p>
 <p></p>
+<p style="
+    margin-top: 50px;">pre环境 </p>    
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/pre/manifest.plist">Install ZSYL-PRE v1.10.0</a></p>
 <p></p>
+<p style="
+    margin-top: 50px;">online环境 </p>  
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/zsyl/online/manifest.plist">Install ZSYL-OL v1.10.0</a></p>
 <p></p>
 </div>
 	
-<div style="width:33%; height: 500px; float:left;">    
+<div style="width:33%; height: 400px; float:left;">    
 <p>打包日期 20210318 </p>   
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/fxyl/test/manifest.plist">Install FXYL-TEST v1.10.0</a></p>
 <p></p>
@@ -41,15 +49,22 @@
 <p></p>
 </div>
 	
-<div style="width:33%; height: 500px; float:left;">    
-<p>打包日期 20210318 </p>   
+<div style="width:33%; height: 400px; float:left;">    
+<p>打包日期 20210318 </p>
+<p style="
+    margin-top: 50px;">内网环境 </p>  						  
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/test/manifest.plist">Install CHANQP-TEST v1.10.0</a></p>
 <p></p>
+<p style="
+    margin-top: 50px;">pre环境 </p>  
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/pre/manifest.plist">Install CHANQP-PRE v1.10.0</a></p>
 <p></p>
+<p style="
+    margin-top: 50px;">online环境 </p> 
 <p><a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/AprilRain1992/ipaInstall/gh-pages/chanqp/online/manifest.plist">Install CHANQP-OL v1.10.0</a></p>
 <p></p>
 </div>   
+</div>
 
 </body>
 </html>
